# pipecat-typecast

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml
src/pipecat_typecast/: __init__.py  tts.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_e2e_tts.py
tests/integration/: __init__.py  test_tts_service.py
tests/unit/: __init__.py  test_language.py  test_models.py
