[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pipecat-ai-typecast"
version = "0.0.1"
description = "Typecast is an AI text-to-speech API that converts text into lifelike, expressive speech in many languages."
license = "BSD-2-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pipecat", "text-to-speech", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    # Pipecat often releases breaking changes, so we pin to a specific version
    # Our transport is based on top of Daily
    "pipecat-ai>=0.0.94",
]

[project.urls]
Source = "https://github.com/neosapience/pipecat-typecast"
Website = "https://typecast.ai"

[dependency-groups]
dev = [
    "onnxruntime>=1.23.2",
    "pipecat-ai[runner,webrtc,openai,local-smart-turn-v3,deepgram,daily]",  # for the example
    "python-dotenv>=1.0.1,<2.0.0",  # for the example
    "ruff>=0.12.11,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "D", # Docstring rules
    "I", # Import rules
]

[tool.ruff.lint.per-file-ignores]
# Skip docstring checks for non-source code
"example.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
